--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 	      <div class="slider-item js-fullheight">
 	      	<div class="overlay"></div>
 	        <div class="container-fluid p-0">
-	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="false">
 	          	<img class="one-third align-self-end order-md-last img-fluid" src="images/bosh25.png" alt="">
-		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateX: '70%' }">
 		          	<div class="text mt-5">
 									<span class="subheading">Be bold & Beautiful</span>
 			            <h1 class="mb-4">Get Pretty Look</h1>
@@ -71,9 +71,9 @@
 	      </div>
 
 	      <div class="slider-item js-fullheight">
-	      	<div class="overlay"></div>
+	      	<div class="overlay">
 	        <div class="container-fluid p-0">
-	          <div class="row d-flex no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="true">
+	          <div class="row d-flex no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="false">
 	          	<img class="one-third align-self-end order-md-last img-fluid" src="images/bosh23.png" alt="">
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text mt-5">
