new page youtube pop up

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<div class="row">
 					<div class="col-md-6 d-flex">
 						<div class="p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/29.jpg);">
-							<a href="https://www.youtube.com/watch?v=OPzpgxlwaTw&list=PLouh1K1d9jkbgO4hIHvabpyxUTqruqFq-" class="icon popup-youtube d-flex justify-content-center align-items-center">
+							<a href="https://www.youtube.com/watch?v=OPzpgxlwaTw&list=PLouh1K1d9jkbgO4hIHvabpyxUTqruqFq-" target="_blank" class="icon .popup-youtube d-flex justify-content-center align-items-center">
 								<span class="icon-play"></span>
 							</a>
 						</div>
